k8s/service.yaml
# StatefulSet 안정 네트워크 ID용
apiVersion: v1
kind: Service
metadata:
  name: gitlab-headless
  namespace: custom-gitlab
spec:
  clusterIP: None
  selector:
    app: gitlab
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: custom-gitlab
spec:
  type: ClusterIP
  selector:
    app: gitlab
  ports:
    - name: http
      port: 80
      targetPort: http
